--- a/src/style.css
+++ b/src/style.css
@@ -1,34 +1,34 @@
-*
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 html,
-body
-{
-    overflow: hidden;
+body {
+	overflow: hidden;
 }
 
-.experience
-{
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
+.experience {
+	position: fixed;
+	width: 100vw;
+	height: 100vh;
 }
 
-.credits
-{
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    color: #ffffff;
-    text-align: right;
-    font-family: 'Roboto', sans-serif;
+.credits {
+	position: absolute;
+	top: 20px;
+	right: 45px;
+	color: #ffffff;
+	text-align: right;
+	font-family: 'Roboto', sans-serif;
 }
 
-.credits a
-{
-    color: inherit;
+.credits a {
+	color: inherit;
+}
+
+.record {
+	width: 3rem;
+	height: 3rem;
 }
